--- a/CNNS/Pixelwise/Pixelwise_classifier.ipynb
+++ b/CNNS/Pixelwise/Pixelwise_classifier.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\tyler\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "from keras.models import Sequential\n",
@@ -18,15 +28,19 @@
     "\n",
     "directorySeparator = \"\\\\\"\n",
     "\n",
-    "testDir = \"E:\\\\594_data\\\\imbalanced_Pixelwise_NN_Data\\\\test_holdout\\\\xd\"\n",
-    "outputDir = \"E:\\\\594_data\\\\imbalanced_Pixelwise_NN_Data\\\\test_holdout\\\\classified_both\" \n",
+    "testDir = \"E:\\\\594_data\\\\custom_NN_Data\\\\test_holdout\\\\images\"\n",
+    "outputDir = \"E:\\\\594_data\\\\custom_NN_Data\\\\test_holdout\\\\classified_both\" \n",
+    "\n",
+    "#testDir = \"E:\\\\594_data\\\\imbalanced_Pixelwise_NN_Data\\\\test_holdout\\\\xd\"\n",
+    "#outputDir = \"E:\\\\594_data\\\\imbalanced_Pixelwise_NN_Data\\\\test_holdout\\\\classified_both\" \n",
+    "\n",
     "window_size = 65\n",
     "middle = int(window_size / 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +75,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded weights from disk\n"
+     ]
+    }
+   ],
    "source": [
     "model = Sequential()\n",
     "model.add(Conv2D(32, (3, 3), input_shape=(1,65,65 ), data_format='channels_first'))\n",
@@ -79,11 +101,11 @@
     "model.add(Dense(64))\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5))\n",
-    "model.add(Dense(1))\n",
-    "model.add(Activation('sigmoid'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
     "\n",
-    "model.load_weights(\"weights.best.imbalanced.hdf5\")\n",
+    "model.load_weights(\"weights.balanced.hdf5\")\n",
+    "#model.load_weights(\"weights.best.imbalanced.hdf5\")\n",
     "print(\"loaded weights from disk\")\n",
     "\n",
     "model.compile(loss='binary_crossentropy',\n",
@@ -106,19 +128,21 @@
     "                crop_img = mirror[(h+window_size-middle):(h+window_size+middle+1), (w+window_size-middle):(w+window_size+middle+1)]\n",
     "                #test_array.append([crop_img / (1./255)])\n",
     "                \n",
-    "                crop_img = [[crop_img]]\n",
+    "                crop_img = [[crop_img] ]\n",
     "                crop_img = np.array(crop_img)\n",
-    "                \n",
+    "                crop_img = crop_img * (1./255)\n",
     "                #print(crop_img.shape)\n",
     "                \n",
-    "                prediction = model.predict(crop_img / (1./255))\n",
+    "                prediction = model.predict(crop_img)\n",
     "                \n",
-    "                if (prediction[0] == 0): #0 is hasCell, 1 is noCell!\n",
+    "                #print(prediction[0])\n",
+    "                \n",
+    "                if (prediction[0] < 0.002): #0 is hasCell, 1 is noCell!\n",
     "                    output_img[h,w] = 255 \n",
     "                    \n",
-    "                #print(prediction)\n",
+    "                \n",
     "        \n",
-    "        cv2.imwrite(outputDir+directorySeparator+\"XD.tif\",output_img)\n",
+    "        cv2.imwrite(outputDir+directorySeparator+filename,output_img)\n",
     "        \n",
     "        #test_array = np.array(test_array)\n",
     "        \n",
