--- a/automatic_detection_scripts/old/mask_generator.ipynb
+++ b/automatic_detection_scripts/old/mask_generator.ipynb
@@ -23,8 +23,8 @@
     "directorySeparator = '\\\\'\n",
     "\n",
     "\n",
-    "inputDir = \"E:\\\\594_data\\\\combined_ground_truth\\\\images\"\n",
-    "outputDir = \"E:\\\\594_data\\\\combined_ground_truth\\\\automated_masks\"\n",
+    "inputDir = \"E:\\\\594_data\\\\custom_NN_Data\\\\test_holdout\\\\images\"\n",
+    "outputDir = \"E:\\\\594_data\\\\custom_NN_Data\\\\test_holdout\\\\automated_results\"\n",
     "\n",
     "directory = os.fsencode(inputDir)\n",
     "\n",
@@ -34,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def is_contour_bad(c):\n",
