--- a/CNNS/Pixelwise/Pixelwise_classifier.ipynb
+++ b/CNNS/Pixelwise/Pixelwise_classifier.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\tyler\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "from keras.models import Sequential\n",
@@ -28,8 +18,8 @@
     "\n",
     "directorySeparator = \"\\\\\"\n",
     "\n",
-    "testDir = \"E:\\\\594_data\\\\custom_NN_Data\\\\test_holdout\\\\images\"\n",
-    "outputDir = \"E:\\\\594_data\\\\custom_NN_Data\\\\test_holdout\\\\classified_both\" \n",
+    "testDir = \"E:\\\\594_data\\\\smoothmuscle_NN_Data\\\\test_holdout\\\\images\"\n",
+    "outputDir = \"E:\\\\594_data\\\\smoothmuscle_NN_Data\\\\test_holdout\\\\classified\" \n",
     "\n",
     "#testDir = \"E:\\\\594_data\\\\imbalanced_Pixelwise_NN_Data\\\\test_holdout\\\\xd\"\n",
     "#outputDir = \"E:\\\\594_data\\\\imbalanced_Pixelwise_NN_Data\\\\test_holdout\\\\classified_both\" \n",
@@ -40,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +127,7 @@
     "                \n",
     "                #print(prediction[0])\n",
     "                \n",
-    "                if (prediction[0] < 0.002): #0 is hasCell, 1 is noCell!\n",
+    "                if (prediction[0] < 0.005): #0 is hasCell, 1 is noCell!\n",
     "                    output_img[h,w] = 255 \n",
     "                    \n",
     "                \n",
@@ -158,13 +148,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -172,18 +155,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
   }
  },
  "nbformat": 4,
