--- a/CNNS/pixelwise_data_generator/data_generator.ipynb
+++ b/CNNS/pixelwise_data_generator/data_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
     "\n",
     "directorySeparator = \"\\\\\"\n",
     "\n",
-    "imageDir = \"E:\\\\594_data\\\\custom_NN_Data\\\\images\"\n",
-    "maskDir = \"E:\\\\594_data\\\\custom_NN_Data\\\\masks_both\"\n",
-    "directory = \"E:\\\\594_data\\\\custom_NN_Data\""
+    "imageDir = \"E:\\\\594_data\\\\smoothmuscle_NN_Data\\\\images\"\n",
+    "maskDir = \"E:\\\\594_data\\\\smoothmuscle_NN_Data\\\\masks\"\n",
+    "directory = \"E:\\\\594_data\\\\smoothmuscle_NN_Data\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#iterates through every positive pixel in every image and makes a new training/valid image with it\n",
     "for filename in os.listdir(imageDir):\n",
     "    if filename.endswith(\".tif\"): \n",
     "\n",
@@ -91,11 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#generate positiveDataCounter random 93x93 slices and save to negative directory. Save 10,000 of them to valid instead.\n",
+    "#generate the same amount of random negative images as there were positive images and save them in the same way, to training and valid\n",
     "\n",
     "while (negativeDataCounter < positiveDataCounter):\n",
     "    #generate 5 random images from each random file\n",
